deployment/collector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-feature-demo-otel-collector
  namespace: open-feature-demo
  labels:
    app: open-feature-demo-otel-collector
spec:
  replicas: 2
  selector:
    matchLabels:
      app: open-feature-demo-otel-collector
  template:
    metadata:
      labels:
        app: open-feature-demo-otel-collector
    spec:
      volumes:
        - name: collector-config
          configMap:
            name: collector-config
      containers:
        - name: otel-collector
          image: otel/opentelemetry-collector-contrib:0.85.0
          args: [ "--config=/etc/collector/collector-config.yaml" ]
          ports:
            - containerPort: 1888
            - containerPort: 8888
            - containerPort: 8889
            - containerPort: 4317
          volumeMounts:
            - name: collector-config
              mountPath: /etc/collector
              readOnly: true
---
apiVersion: v1
kind: Service
metadata:
  name: open-feature-demo-otel-collector-service
  namespace: open-feature-demo
spec:
  type: ClusterIP
  selector:
    app: open-feature-demo-otel-collector
  ports:
    - port: 1888
      targetPort: 1888
      name: pprof
    - port: 8888
      targetPort: 8888
      name: exported-metrics
    - port: 8889
      targetPort: 8889
      name: exporter-metrics
    - port: 4317
      targetPort: 4317
      name: grpc-receiver
