deployment/go-feature-flag.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-feature-demo-go-feature-flag-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-feature-demo-goff
  template:
    metadata:
      labels:
        app: open-feature-demo-goff
    spec:
      containers:
        - name: open-feature-demo-goff
          image: thomaspoignant/go-feature-flag-relay-proxy:v0.3.0
          ports:
            - containerPort: 1031
          volumeMounts:
            - name: goff-config-volume
              mountPath: /goff/
      volumes:
        - name: goff-config-volume
          configMap:
            name: goff-config
---
apiVersion: v1
kind: Service
metadata:
  name: open-feature-demo-goff-service
spec:
  type: ClusterIP
  selector:
    app: open-feature-demo-goff
  ports:
    - port: 1031
      targetPort: 1031
