deployment/jaeger-tracing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-feature-demo-jaeger-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-feature-demo-jaeger
  template:
    metadata:
      labels:
        app: open-feature-demo-jaeger
    spec:
      containers:
        - name: open-feature-demo-jaeger
          image: jaegertracing/all-in-one:1.38
          ports:
            - containerPort: 6832
            - containerPort: 16686
---
apiVersion: v1
kind: Service
metadata:
  name: open-feature-demo-jaeger-service
spec:
  type: NodePort
  selector:
    app: open-feature-demo-jaeger
  ports:
    - port: 6832
      targetPort: 6832
      name: internal

---
# Service exposed using NodePort
apiVersion: v1
kind: Service
metadata:
  name: open-feature-demo-jaeger-ui
spec:
  type: LoadBalancer
  selector:
    app: open-feature-demo-jaeger
  ports:
    - port: 80
      targetPort: 16686
