deployment/playground-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-feature-demo-playground-app
  namespace: open-feature-demo
  labels:
    app: open-feature-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-feature-demo
  template:
    metadata:
      labels:
        app: open-feature-demo
      annotations:
        openfeature.dev: "enabled"
        openfeature.dev/featureflagconfiguration: "end-to-end"
    spec:
      volumes:
        - name: proxy-config
          configMap:
            name: proxy-config
            items:
              - key: nginx.conf
                path: nginx.conf
      containers:
        - name: flagd-proxy
          image: nginx:stable-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: proxy-config
              mountPath: /etc/nginx
              readOnly: true
        - name: open-feature-demo
          image: ghcr.io/open-feature/playground-app:v0.8.0
          args:
            - flagd
          ports:
            - containerPort: 30000
---
apiVersion: v1
kind: Service
metadata:
  name: open-feature-demo-service
  namespace: open-feature-demo
spec:
  type: ClusterIP
  selector:
    app: open-feature-demo
  ports:
    - port: 80
      targetPort: 30000
---
apiVersion: v1
kind: Service
metadata:
  name: flagd-service
  namespace: open-feature-demo
spec:
  type: ClusterIP
  selector:
    app: open-feature-demo
  ports:
    - port: 8013
      targetPort: 80
